--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
+
 body {
+  margin: 0 auto;
   font-family: "Open Sans", sans-serif;
   color: #444444;
 }
