--- a/src/Component/Shared/Header/Header.css
+++ b/src/Component/Shared/Header/Header.css
@@ -4,20 +4,27 @@
   background: #009970;
   border-radius: 10px;
   display: flex;
-
+  width: 140px;
+  margin-top: 10px;
   justify-content: center;
   align-items: center;
+}
+.logo:hover {
+  background: #fff;
+  border: 2px solid #009970;
 }
 .logo span {
   color: #fff;
   /* text-decoration: none; */
   font-size: 20px;
-  padding: 10px;
+  padding: 9px 10px;
   /* line-height: 1; */
   font-weight: 700;
   font-family: "Poppins", sans-serif;
 }
-
+.logo span:hover {
+  color: #009970;
+}
 .header-nav {
   display: flex;
   align-items: center;
@@ -32,4 +39,15 @@
   font-family: "Poppins", sans-serif;
   white-space: nowrap;
   transition: 0.3s;
+}
+.header-nav span {
+  padding: 5px;
+}
+.header-nav span:active {
+  font-size: 20px;
+  font-weight: 900;
+  background: #009970;
+  padding: 10px;
+  border: radius 20px;
+  color: wheat;
 }
